Feed Page: Fixed header formatting and added top margin so Feed Name is visible. Styled and fixed widths.

--- a/app/stylesheets/_header.css.sass
+++ b/app/stylesheets/_header.css.sass
@@ -156,11 +156,13 @@ $black-shadow: 0px 2px 1px black
         background-color: rgba(0,0,0,0.10)
         color: #FCFAF4
         font-weight: bold
+        font-family: $heading
         text-shadow: 1px 1px 0px rgba(0,0,0,0.65)
         -webkit-font-smoothing: antialiased
         border: 1px solid #151f28
         box-shadow: 0px 1px 0px rgba(255,255,255,0.15), inset 1px 1px 3px rgba(0,0,0,0.20)
         behavior: url("/assets/PIE.htc")
+        float: left
         &:active, &:focus
           outline: none
           //background-color: #FCFAF4
